--- a/vintiTri/src/app/pages/faq/faq.component.html
+++ b/vintiTri/src/app/pages/faq/faq.component.html
@@ -5,21 +5,33 @@
                 <div class="card">
                     <div class="card">
                         <div class="card-body">
-                            <h6 class="text-dark card-title mb-2">Why buy products online?</h6>
-                            <h6 class="text-center text-muted card-title mb-2">We only operate online and that's how we can keep our high quality products so competitive.</h6>
+                            <h6 class="text-dark card-title mb-2">What makes our products high-quality?</h6>
+                            <h6 class="text-center text-muted card-title mb-2">We have the highly qualified workers that only use high-quality materials.</h6>
+                        </div>
+                        <div class="card-body">
+                            <h6 class="text-dark card-title mb-2">Why buy our products online?</h6>
+                            <h6 class="text-center text-muted card-title mb-2">We only operate online and that's how we can keep our high quality products prices so competitive.</h6>
                         </div>
                         <div class="card-body">
                             <h6 class="text-center text-dark card-title mb-2">How long does it take to get my package?</h6>
-                            <h6 class="text-center text-muted card-title mb-2">Normally it takes 3 to 5 working days after payment confirmation.&nbsp;</h6>
+                            <h6 class="text-center text-muted card-title mb-2">In normal conditions it takes 3 to 5 working days after payment confirmation.&nbsp;</h6>
                         </div>
                         <div class="card-body">
                             <h6 class="text-center text-dark card-title mb-2">What size should I choose?</h6>
-                            <h6 class="text-center text-muted card-title mb-2">Check our size table to find the size that best fits you.</h6>
+                            <h6 class="text-center text-muted card-title mb-2">Check our <a routerLink="/size-calculator">size table</a> to find the size that best fits you.</h6>
+                        </div>
+                        <div class="card-body">
+                            <h6 class="text-center text-dark card-title mb-2">How should I wash this type of clothing?</h6>
+                            <h6 class="text-center text-muted card-title mb-2">Since our pieces are made with almost 100% cotton you should expect some shrink when washed or dried with high temperatures (>60ºC).</h6>
                         </div>
                         <div class="card-body">
                             <h6 class="text-center text-dark card-title mb-2">I want to return the package, how should I proceed?</h6>
                             <h6 class="text-center text-muted card-title mb-2">We acept refunds up to 30 days after item purchase. 
                                 You can choose between item trade or total refund which will be made to the same account that was used to make the payment.</h6>
+                        </div>
+                        <div class="card-body">
+                            <h6 class="text-center text-dark card-title mb-2">You still have some question for us?</h6>
+                            <h6 class="text-center text-muted card-title mb-2">Send us a direct email using our <a routerLink="/contact-us">form</a>.</h6>
                         </div>
                     </div>
                 </div>
