--- a/vintiTri/src/app/pages/home/home.component.html
+++ b/vintiTri/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="clean-block clean-hero" style="background-image:url(&quot;https://images.pexels.com/photos/2310696/pexels-photo-2310696.jpeg?cs=srgb&amp;dl=adult-casual-clothing-daylight-2310696.jpg&amp;fm=jpg&quot;);color:rgba(0, 0, 0, 0);">
         <div data-aos="fade" class="text">
-            <h2>Make it simple but significant.</h2>
+            <h2>Make it simply significant.</h2>
             <p>Check our unique men fashion-wear.</p>
             <a class="btn btn-outline-light btn-lg" role="button" routerLink="/t-shirts">SHOP NOW</a></div>
     </section>
@@ -14,7 +14,7 @@
                 <div class="col-md-6">
                     <h3></h3>
                     <div class="getting-started-info">
-                        <p class="text-center">We believe that the current sizes and the fabrics aren't covering the some of the most common requests in fashion industry.&nbsp;<br><strong>You identified the problem, we provide the solution.</strong></p>
+                        <p class="text-center">We believe that the current sizes and fabrics aren't covering some of the most common requests in the fashion industry.&nbsp;<br><strong>You create the demands, we provide the solutions.</strong></p>
                     </div><a class="btn btn-outline-primary btn-lg" role="button" routerLink="/about-us">Read more</a></div>
             </div>
         </div>
@@ -28,15 +28,15 @@
             <div class="row justify-content-center">
                 <div data-bs-hover-animate="pulse" class="col-md-5 feature-box"><i class="material-icons">accessibility_new</i>
                     <h5 class="text-justify"><strong>Unique Fit</strong></h5>
-                    <p class="text-left">We provide clothing that fits your body with a real range of sizes for your personal choice.</p>
+                    <p class="text-left">We provide clothing that fits your needs with a wide range of sizes for your personal choice.</p>
                 </div>
                 <div data-bs-hover-animate="pulse" class="col-md-5 feature-box"><i class="material-icons">done_outline</i>
                     <h5><strong>Premium Quality</strong></h5>
-                    <p class="text-left">We allways aim for high quality in our products so you can expect long lasting pieces when you choose us.</p>
+                    <p class="text-left">We always aim for high quality in our products so you can expect long lasting pieces when you choose us.</p>
                 </div>
                 <div data-bs-hover-animate="pulse" class="col-md-5 feature-box"><i class="material-icons">all_inclusive</i>
                     <h5><strong>Classic Design</strong>&nbsp;</h5>
-                    <p class="text-left">Our classic design makes sure that your piece never goes out of the trend.</p>
+                    <p class="text-left">With our classic designs, your piece will never go out of fashion.</p>
                 </div>
                 <div data-bs-hover-animate="pulse" class="col-md-5 feature-box"><i class="material-icons">eco</i>
                     <h5><strong>Color and Material Choice</strong></h5>
