--- a/vintiTri/src/app/pages/about-us/about-us.component.html
+++ b/vintiTri/src/app/pages/about-us/about-us.component.html
@@ -3,32 +3,32 @@
     <div class="container">
         <div class="intro">
             <h4 class="text-center text-primary">ABOUT US</h4>
-            <p class="text-center">In the suburbs of the Wild Lisbon, an young an unique brand was born and is constantly being reconstructed.</p>
+            <p class="text-center">In the suburbs of Lisbon, a young and unique brand was born and is constantly being challenged.</p>
         </div>
         <div class="row features">
             <div class="col-sm-6 col-lg-4 item"><i class="fa fa-map-marker icon"></i>
                 <h3 class="text-left name">Made in Portugal</h3>
-                <p class="text-left description">All our unique products are made in Western Europe by high skilled workers.</p>
+                <p class="text-left description">All our unique products are made in Western Europe by highly-skilled workers.</p>
             </div>
             <div class="col-sm-6 col-lg-4 item"><i class="fa fa-clock-o icon"></i>
                 <h3 class="text-left name">Fast Shipping</h3>
-                <p class="text-left description">We have a platform network that allow us to operate very efficiently and deliver your package quickly.</p>
+                <p class="text-left description">We have a platform network that allows us to operate very efficiently and deliver your package quickly.</p>
             </div>
             <div class="col-sm-6 col-lg-4 item"><i class="fa fa-pencil icon"></i>
                 <h3 class="text-left name">Designed Clothing</h3>
-                <p class="text-left description">We believe that the best characteristic of a piece of clothing is it's fit so we provide a wider variety of sizes.</p>
+                <p class="text-left description">We believe that the best characteristic of a piece of clothing is its fit so we provide a wider variety of sizes.</p>
             </div>
             <div class="col-sm-6 col-lg-4 item"><i class="fa fa-rotate-left icon"></i>
                 <h3 class="text-left name">Sustainable production</h3>
-                <p class="text-left description">Working with high quality materials make our pieces long lasting which translates in less agressions to our Planet.</p>
+                <p class="text-left description">Working with high quality materials makes our pieces long lasting which translates in a lighter environmental footprint.</p>
             </div>
             <div class="col-sm-6 col-lg-4 item"><i class="fa fa-plane icon"></i>
                 <h3 class="text-left name">International Shipping</h3>
-                <p class="text-left description">Our products are available across all the Europe and North America.</p>
+                <p class="text-left description">Our products are available all across Europe and North America.</p>
             </div>
             <div class="col-sm-6 col-lg-4 item"><i class="fa fa-phone icon"></i>
                 <h3 class="text-left name">Customer Support</h3>
-                <p class="text-left description">We believe that communication is the key for the success and that's why we guarantee that any question or suggestion will be taken in consideration.</p>
+                <p class="text-left description">We believe that communication is the key for success and that is why we guarantee that any questions or suggestions will be taken in high regard.</p>
             </div>
         </div>
     </div>
