--- a/vintiTri/src/app/pages/polos/polos.component.html
+++ b/vintiTri/src/app/pages/polos/polos.component.html
@@ -1,4 +1,4 @@
-<div class="alert alert-success text-center" [style.display]='addToMyCartSuccess'>Product was added to your cart!</div>
+<div class="alert alert-success text-center" [style.display]='addToMyCartSuccess'>Product was added to your cart.</div>
     <section class="clean-block clean-pricing dark" style="background-color:rgb(255,255,255);">
         <div class="container">
             <section class="clean-block">
