--- a/vintiTri/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/vintiTri/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -18,6 +18,7 @@
                     <td>{{order.color}}</td>
                     <td> {{order.size}} </td>
                     <td>{{order.price}}€</td>
+                    <td><button class="btn btn-danger btn-sm" (click)=removeThisItem(i)>x</button></td>
                     </tr>
 
                     <tr>
@@ -25,7 +26,7 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                    <td>{{totalValue}}€</td>
+                    <td>{{totalValue | number}}€</td>
                         </tr>
                 </tbody>
             </table>
