--- a/vintiTri/src/app/pages/terms-and-conditions/terms-and-conditions.component.html
+++ b/vintiTri/src/app/pages/terms-and-conditions/terms-and-conditions.component.html
@@ -42,8 +42,8 @@
                                 no nosso julgamento, achamos que o utilizador falhou ou suspeitamos que falhou em qualquer ponto dos termos de serviço, reserva-nos o direito de cessar o nosso acordo com o utilizador, a qualquer momento, sem aviso
                                 prévio, contudo o utilizador mantêm todas as responsabilidades até a data da cessação.<br><br><br><strong>SECÇÃO 13 - CONTACTO</strong><br><br><strong>​</strong>Qualquer questão relativa aos termos de serviço deve ser
                                 enviado por e-mail para&nbsp;info@icwear.pt<br><br><strong>SECÇÃO 14 - LEI APLICÁVEL E RESOLUÇÃO DE LIGÍOS</strong><br><br>Os Termos de Utilização serão regidos pela lei portuguesa. Para julgar todas as questões emergentes
-                                dos Termos de Utilização fixa-se como competente o foro da Comarca de Lisboa, com expressa renúncia a qualquer outro.<br>​<br>Elementos de identificação (em conformidade com art.º 10.º da Lei do Comércio Electrónico)a)&nbsp;<br>Diogo
-                                Pereira -&nbsp;Empresário em Nome Individualb) a)&nbsp;<br>Avenida Cidade de Luanda, 1800-099, Lisboa, Portugal;<br>b) email: info@vinti.tri.pt;<br>c) NIF 256256256.<br></h6>
+                                dos Termos de Utilização fixa-se como competente o foro da Comarca de Lisboa, com expressa renúncia a qualquer outro.<br>​<br>Elementos de identificação (em conformidade com art.º 10.º da Lei do Comércio Electrónico)a)&nbsp;<br> a) Diogo
+                                Pereira -&nbsp; Empresário em Nome Individual&nbsp;<br>b) Avenida Cidade de Luanda, 1800-099, Lisboa, Portugal;<br>c) email: info@vinti.tri.pt;<br>d) NIF 256256256.<br></h6>
                             <h6 class="text-muted card-title mb-2"></h6>
                             <p class="text-dark card-text"></p>
                         </div>
