--- a/vintiTri/src/app/pages/t-shirts/t-shirts.component.html
+++ b/vintiTri/src/app/pages/t-shirts/t-shirts.component.html
@@ -9,13 +9,13 @@
                         <div class="col-md-5 col-lg-4" *ngFor="let tshirt of tShirtCollection; let i = index" id={{i}}>
                             <div class="clean-pricing-item">
                             <h6 class="text-center">{{tshirt.model}} {{tshirt.type}}</h6>
-                            <div class="carousel slide" data-ride="carousel" id="carousel{{i}}">
+                            <div class="carousel" data-ride="carousel" id="carousel{{i}}">
                                     <div class="carousel-inner" role="listbox">
                                         <div class="carousel-item active">
-                                            <img class="w-100 d-block" src={{tshirt.images[0]}} alt="Slide Image" height="230">
+                                            <img class="w-100 d-block" src={{tshirt.images[i][0]}} alt="Slide Image" height="330">
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="w-100 d-block" src={{tshirt.images[1]}} alt="Slide Image" height="230">
+                                            <img class="w-100 d-block" src={{tshirt.images[i][1]}} alt="Slide Image" height="330">
                                         </div>
                                     </div>
                                     <div><a class="carousel-control-prev" href="#carousel{{i}}" role="button" data-slide="prev">
@@ -33,7 +33,7 @@
                             
                             <select class="d-inline-block flex-grow-0 flex-shrink-0" id="{{tshirt.model}}.color">
                                     <optgroup label="Select the color">
-                                    <option *ngFor="let color of tshirt.colors; let i = index" value={{color}} > {{color}}</option>
+                                    <option *ngFor="let color of tshirt.colors; let i = index" value={{color}}> {{color}}</option>
                                 </optgroup></select>
                             <select class="flex-grow-0 flex-shrink-0" id="{{tshirt.model}}.size">
                                     <optgroup label="Select your size">
