--- a/vintiTri/src/app/pages/polos/polos.component.html
+++ b/vintiTri/src/app/pages/polos/polos.component.html
@@ -6,16 +6,16 @@
                     <h4 class="text-center text-info">POLOS</h4>
                     <a class="d-block" routerLink="/size-calculator" target="_blank">Size Table</a>
                     <div class="row justify-content-center">
-                        <div class="col-md-5 col-lg-4" *ngFor="let polo of poloCollection; let i = index" id={{i}}>
+                        <div class="col-md-6 col-lg-4" *ngFor="let polo of poloCollection; let i = index" id={{i}}>
                             <div class="clean-pricing-item">
                             <h6 class="text-center">{{polo.model}} {{polo.type}}</h6>
-                            <div class="carousel slide" data-ride="carousel" id="carousel{{i}}">
+                            <div class="carousel" data-ride="carousel" id="carousel{{i}}">
                                     <div class="carousel-inner" role="listbox">
                                         <div class="carousel-item active">
-                                            <img class="w-100 d-block" src={{polo.images[0]}} alt="Slide Image" height="230">
+                                            <img class="w-100 d-block" src={{polo.images[indexOfImageByColor][0]}} alt="Slide Image" height="400">
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="w-100 d-block" src={{polo.images[1]}} alt="Slide Image" height="230">
+                                            <img class="w-100 d-block" src={{polo.images[indexOfImageByColor][1]}} alt="Slide Image" height="400">
                                         </div>
                                     </div>
                                     <div><a class="carousel-control-prev" href="#carousel{{i}}" role="button" data-slide="prev">
@@ -28,10 +28,8 @@
                                         <li data-target="#carousel" data-slide-to="0" class="active"></li>
                                         <li data-target="#carousel" data-slide-to="1"></li>
                                     </ol>
-                                </div>
-                            <h5 class="text-center text-dark">{{polo.price}}€</h5>
-                            
-                            <select class="d-inline-block flex-grow-0 flex-shrink-0" id="{{polo.model}}.color">
+                                </div>                            
+                            <select class="d-inline-block flex-grow-0 flex-shrink-0" id="{{polo.model}}.color" (change)="changeImageByColor(i, polo.model)">
                                     <optgroup label="Select the color">
                                     <option *ngFor="let color of polo.colors; let i = index" value={{color}} [selected]="i == 0"> {{color}}</option>
                                 </optgroup></select>
@@ -41,8 +39,8 @@
                                     </optgroup>
                                     </select>
                                     <hr>
-                                    <a class="btn btn-outline-primary btn-block btn-sm" role="button" (click)="buyItNow(polo.type, polo.model, polo.price)" routerLink="/shopping-cart">BUY NOW</a>
-                                    <button class="btn btn-outline-primary active btn-block btn-sm" (click)="addToCart(polo.type, polo.model, polo.price)" type="button">ADD TO CART</button>         
+                                    <a class="btn btn-outline-primary btn-block btn-sm" role="button" (click)="buyItNow(polo.type, polo.model, polo.price)" routerLink="/shopping-cart">BUY NOW - {{polo.price}}€</a>
+                                    <button class="btn btn-outline-primary active btn-block btn-sm" (click)="addToCart(polo.type, polo.model, polo.price)" type="button">ADD TO CART ({{polo.price}}€)</button>         
                         </div>
                     </div>
         </div>
