--- a/vintiTri/src/app/pages/t-shirts/t-shirts.component.html
+++ b/vintiTri/src/app/pages/t-shirts/t-shirts.component.html
@@ -12,10 +12,10 @@
                             <div class="carousel" data-ride="carousel" id="carousel{{i}}">
                                     <div class="carousel-inner" role="listbox">
                                         <div class="carousel-item active">
-                                            <img class="w-100 d-block" src={{tshirt.images[i][0]}} alt="Slide Image" height="330">
+                                            <img class="w-100 d-block" src={{tshirt.images[indexOfImageByColor][0]}} alt="Slide Image" height="400">
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="w-100 d-block" src={{tshirt.images[i][1]}} alt="Slide Image" height="330">
+                                            <img class="w-100 d-block" src={{tshirt.images[indexOfImageByColor][1]}} alt="Slide Image" height="400">
                                         </div>
                                     </div>
                                     <div><a class="carousel-control-prev" href="#carousel{{i}}" role="button" data-slide="prev">
@@ -28,21 +28,19 @@
                                         <li data-target="#carousel" data-slide-to="0" class="active"></li>
                                         <li data-target="#carousel" data-slide-to="1"></li>
                                     </ol>
-                                </div>
-                            <h5 class="text-center text-dark">{{tshirt.price}}€</h5>
-                            
-                            <select class="d-inline-block flex-grow-0 flex-shrink-0" id="{{tshirt.model}}.color">
+                                </div>                            
+                            <select class="d-inline-block flex-grow-0 flex-shrink-0" id="{{tshirt.model}}.color" (change)="changeImageByColor(i, tshirt.model)">
                                     <optgroup label="Select the color">
-                                    <option *ngFor="let color of tshirt.colors; let i = index" value={{color}}> {{color}}</option>
+                                    <option *ngFor="let color of tshirt.colors" value={{color}}> {{color}}</option>
                                 </optgroup></select>
                             <select class="flex-grow-0 flex-shrink-0" id="{{tshirt.model}}.size">
                                     <optgroup label="Select your size">
-                                        <option *ngFor="let size of tshirt.sizes; let i = index" value={{size}} [selected]="i == 2"> {{size}} </option>
+                                        <option *ngFor="let size of tshirt.sizes; let i2 = index" value={{size}} [selected]="i2 == 2"> {{size}} </option>
                                     </optgroup>
                                     </select>
                                     <hr>
-                                    <a class="btn btn-outline-primary btn-block btn-sm" role="button" (click)="buyItNow(tshirt.type, tshirt.model, tshirt.price)" routerLink="/shopping-cart">BUY NOW</a>
-                                    <button class="btn btn-outline-primary active btn-block btn-sm" (click)="addToCart(tshirt.type, tshirt.model, tshirt.price)" type="button">ADD TO CART</button>         
+                                    <a class="btn btn-outline-primary btn-block btn-sm" role="button" (click)="buyItNow(tshirt.type, tshirt.model, tshirt.price)" routerLink="/shopping-cart">BUY NOW - {{tshirt.price}}€</a>
+                                    <button class="btn btn-outline-primary active btn-block btn-sm" (click)="addToCart(tshirt.type, tshirt.model, tshirt.price)" type="button">ADD TO CART ({{tshirt.price}}€)</button>         
                         </div>
                     </div>
         </div>
