--- a/vintiTri/src/app/pages/polos/polos.component.html
+++ b/vintiTri/src/app/pages/polos/polos.component.html
@@ -12,10 +12,10 @@
                             <div class="carousel" data-ride="carousel" id="carousel{{i}}">
                                     <div class="carousel-inner" role="listbox">
                                         <div class="carousel-item active">
-                                            <img class="w-100 d-block" src={{polo.images[indexOfImageByColor][0]}} alt="Slide Image" height="400">
+                                            <img class="w-100 d-block" id="{{polo.model}}1" src={{polo.images[0][0]}} alt="Slide Image" height="400">
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="w-100 d-block" src={{polo.images[indexOfImageByColor][1]}} alt="Slide Image" height="400">
+                                            <img class="w-100 d-block" id="{{polo.model}}2" src={{polo.images[0][1]}} alt="Slide Image" height="400">
                                         </div>
                                     </div>
                                     <div><a class="carousel-control-prev" href="#carousel{{i}}" role="button" data-slide="prev">
