--- a/vintiTri/src/app/pages/t-shirts/t-shirts.component.html
+++ b/vintiTri/src/app/pages/t-shirts/t-shirts.component.html
@@ -9,13 +9,13 @@
                         <div class="col-md-5 col-lg-4" *ngFor="let tshirt of tShirtCollection; let i = index" id={{i}}>
                             <div class="clean-pricing-item">
                             <h6 class="text-center">{{tshirt.model}} {{tshirt.type}}</h6>
-                            <div class="carousel" data-ride="carousel" id="carousel{{i}}">
+                            <div class="carousel" id="carousel{{i}}">
                                     <div class="carousel-inner" role="listbox">
                                         <div class="carousel-item active">
-                                            <img class="w-100 d-block" src={{tshirt.images[indexOfImageByColor][0]}} alt="Slide Image" height="400">
+                                            <img class="w-100 d-block" id="{{tshirt.model}}1" src={{tshirt.images[0][0]}} alt="Slide Image" height="400">
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="w-100 d-block" src={{tshirt.images[indexOfImageByColor][1]}} alt="Slide Image" height="400">
+                                            <img class="w-100 d-block" id="{{tshirt.model}}2" src={{tshirt.images[0][1]}} alt="Slide Image" height="400">
                                         </div>
                                     </div>
                                     <div><a class="carousel-control-prev" href="#carousel{{i}}" role="button" data-slide="prev">
