--- a/vintiTri/src/app/pages/privacy-policy/privacy-policy.component.html
+++ b/vintiTri/src/app/pages/privacy-policy/privacy-policy.component.html
@@ -91,7 +91,7 @@
                                     servidores.<br><br><strong>Alterações a esta política de privacidade</strong><br>Podemos atualizar nossa Política de Privacidade de tempos em tempos. Vamos notificá-lo de quaisquer alterações, publicando a nova
                                     Política de Privacidade nesta página.<br>Avisaremos você por e-mail e / ou um aviso proeminente em nosso Serviço antes que a alteração entre em vigor e atualize a "data efetiva" na parte superior desta Política
                                     de Privacidade.<br>Recomenda-se que você revise esta Política de Privacidade periodicamente para quaisquer alterações. Alterações a esta Política de Privacidade são eficazes quando são publicadas nesta página.Contate-nosSe
-                                    você tiver alguma dúvida sobre esta Política de Privacidade, entre em contato conosco:Por email: info@vintitri.pt<br>Ao visitar esta página no nosso site: https://www.vintitri.pt/contact.html</h6>
+                                    você tiver alguma dúvida sobre esta Política de Privacidade, entre em contato conosco:Por email: vinti.tri.shop@gmail.com<br>Ao visitar esta página no nosso site: https://www.vintitri.pt/contact.html</h6>
                             <p class="text-dark card-text"></p>
                         </div>
                     </div>
