--- a/vintiTri/src/app/pages/terms-and-conditions/terms-and-conditions.component.html
+++ b/vintiTri/src/app/pages/terms-and-conditions/terms-and-conditions.component.html
@@ -43,7 +43,7 @@
                                 prévio, contudo o utilizador mantêm todas as responsabilidades até a data da cessação.<br><br><br><strong>SECÇÃO 13 - CONTACTO</strong><br><br><strong>​</strong>Qualquer questão relativa aos termos de serviço deve ser
                                 enviado por e-mail para&nbsp;info@icwear.pt<br><br><strong>SECÇÃO 14 - LEI APLICÁVEL E RESOLUÇÃO DE LIGÍOS</strong><br><br>Os Termos de Utilização serão regidos pela lei portuguesa. Para julgar todas as questões emergentes
                                 dos Termos de Utilização fixa-se como competente o foro da Comarca de Lisboa, com expressa renúncia a qualquer outro.<br>​<br>Elementos de identificação (em conformidade com art.º 10.º da Lei do Comércio Electrónico)a)&nbsp;<br> a) Diogo
-                                Pereira -&nbsp; Empresário em Nome Individual&nbsp;<br>b) Avenida Cidade de Luanda, 1800-099, Lisboa, Portugal;<br>c) email: info@vinti.tri.pt;<br>d) NIF 256256256.<br></h6>
+                                Pereira -&nbsp; Empresário em Nome Individual&nbsp;<br>b) Avenida Cidade de Luanda, 1800-099, Lisboa, Portugal;<br>c) email: vinti.tri.shop@gmail.com;<br>d) NIF 256256256.<br></h6>
                             <h6 class="text-muted card-title mb-2"></h6>
                             <p class="text-dark card-text"></p>
                         </div>
