--- a/vintiTri/src/app/features/footer/footer.component.html
+++ b/vintiTri/src/app/features/footer/footer.component.html
@@ -40,6 +40,6 @@
                 </div>
     </div>
     <div class="footer-copyright">
-        <p>VINTI-TRI © 2020| info@vintitri.pt</p>
+        <p>VINTI-TRI © 2020| vinti.tri.shop@gmail.com</p>
         <img src="../../../assets/my-project-images/paymentMethods.jpg" width="200"></div>
 </footer>
