--- a/vintiTri/src/app/pages/home/home.component.html
+++ b/vintiTri/src/app/pages/home/home.component.html
@@ -1,82 +1,88 @@
-<section class="clean-block clean-hero" style="background-image:url(&quot;https://images.pexels.com/photos/2310696/pexels-photo-2310696.jpeg?cs=srgb&amp;dl=adult-casual-clothing-daylight-2310696.jpg&amp;fm=jpg&quot;);color:rgba(0, 0, 0, 0);">
-        <div data-aos="fade" class="text">
-            <h2>Make it simply significant.</h2>
-            <p>Check our unique men fashion-wear.</p>
-            <a class="btn btn-outline-light btn-lg" role="button" routerLink="/t-shirts">SHOP NOW</a></div>
-    </section>
-    <section class="clean-block clean-info dark">
+<!-- 1st SECTION -->
+<section class="clean-block clean-hero backgroundImage" style="background-image:url(&quot;https://images.pexels.com/photos/2310696/pexels-photo-2310696.jpeg?cs=srgb&amp;dl=adult-casual-clothing-daylight-2310696.jpg&amp;fm=jpg&quot;);color:rgba(0, 0, 0, 0);">
+    <div data-aos="fade" class="text">
+        <p style="font-size: 30px; font-weight: bolder;">Make it simply significant.</p>
+        <p style="font-weight: bolder;">Check our unique fashion-wear.</p>
+        <a class="btn btn-outline-light btn-lg" style="font-weight: bolder; border: solid 2px white;" role="button" routerLink="/collection">SHOP NOW</a>
+    </div>
+</section>
+
+<!-- 2nd Page -->
+<section class="clean-block clean-info dark">
         <div class="container">
-            <div class="secondPageTitle">
-                    <h4 class="text-center text-info">Discover the difference.</h4>
-            </div>
             <div class="row align-items-center">
-                <div class="col-md-6"><img class="img-thumbnail img-fluid" src="../../../assets/my-project-images/blueTexture.jpg" data-bs-hover-animate="pulse"></div>
-                <div class="col-md-6">
-                    <h3></h3>
-                    <div class="getting-started-info">
-                        <p class="text-center">We believe that the current sizes and fabrics aren't covering some of the most common requests in the fashion industry.&nbsp;<br><strong>You create the demands, we provide the solutions.</strong></p>
-                    </div><a class="btn btn-outline-primary btn-lg" role="button" routerLink="/about-us">Read more</a></div>
-            </div>
-        </div>
-    </section>
-    <section class="clean-block features" style="background-color:rgb(255,255,255);">
-        <div class="container">
-            <div class="block-heading">
-                <h4 class="text-info">Why Vinti-Tri?</h4>
-                <p></p>
-            </div>
-            <div class="row justify-content-center">
-                <div data-bs-hover-animate="pulse" class="col-md-5 feature-box"><i class="material-icons">accessibility_new</i>
-                    <h5 class="text-justify"><strong>Unique Fit</strong></h5>
-                    <p class="text-left">We provide clothing that fits your needs with a wide range of sizes for your personal choice.</p>
+                <div class="col-12 col-sm-12 col-md-6"><img class="img-thumbnail" src="../../../assets/my-project-images/blueTexture.jpg">
                 </div>
-                <div data-bs-hover-animate="pulse" class="col-md-5 feature-box"><i class="material-icons">done_outline</i>
-                    <h5><strong>Premium Quality</strong></h5>
-                    <p class="text-left">We always aim for high quality in our products so you can expect long lasting pieces when you choose us.</p>
-                </div>
-                <div data-bs-hover-animate="pulse" class="col-md-5 feature-box"><i class="material-icons">all_inclusive</i>
-                    <h5><strong>Classic Design</strong>&nbsp;</h5>
-                    <p class="text-left">With our classic designs, your piece will never go out of fashion.</p>
-                </div>
-                <div data-bs-hover-animate="pulse" class="col-md-5 feature-box"><i class="material-icons">eco</i>
-                    <h5><strong>Color and Material Choice</strong></h5>
-                    <p class="text-left">Our color and material choices are specially choosen to go along with most of the styles.</p>
+                <div class="col-12 col-sm-12 col-md-6">
+                    <h4 class="text-center" style="color: #007bff;; font-weight: bolder; margin-bottom: 40px;">Discover the difference.</h4>
+                    <p class="text-center">We believe that the current models and fabrics aren't covering some of the most common requests in the fashion industry.&nbsp;<br><strong>You create the demands, we provide the solutions.</strong></p>
+                    <a class="btn btn-outline-primary btn-md" style="border: solid 2px #007bff; font-weight: bolder;" role="button" routerLink="/about-us">READ MORE</a>
                 </div>
             </div>
         </div>
-    </section>
-    <section class="clean-block about-us" style="background-color:rgb(255,255,255);">
-        <div class="container">
-            <div class="block-heading">
-                <h4 class="text-info">Our Unique Colection</h4>
-                <p class="text-center">Inspired and challenged everyday to express emotions in every creation.</p>
+</section>
+<!-- 3RD PAGE -->
+<section class="clean-block features" style="background-color:rgb(255,255,255); margin-right: 5%; margin-left: 5%;">
+    <div class="container">
+        <div class="block-heading">
+            <h4 style="color: #007bff; font-weight: bolder; margin-bottom: 20px;">Why Vinti Tri?</h4>
+            <p></p>
+        </div>
+        <div class="row justify-content-center" style="font-size: 15px; margin-bottom:40px; text-align:center;">
+            <div class="col-md-5 feature-box"><i class="material-icons">accessibility_new</i>
+                <h5><strong>Unique Fit</strong></h5>
+                <p>We provide clothing that fits your needs with a wide range of sizes for your personal choice.</p>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-sm-6 col-lg-4">
-                    <div class="card clean-card text-center">
-                        <img class="img-fluid card-img-top w-100 d-block" src="../../../assets/my-project-images/fabricColors.jpg" data-bs-hover-animate="pulse">
-                        <div class="card-body info">
-                            <h4 class="card-title"><a routerLink="/t-shirts">CHOOSE COLOR</a></h4>
-                            <p class="card-text">Discover quality and confort with our classic Shirts.</p>
-                        </div>
+            <div class="col-md-5 feature-box"><i class="material-icons">done_outline</i>
+                <h5><strong>Premium Quality</strong></h5>
+                <p>We always aim for high quality in our products so you can expect long lasting pieces when you choose us.</p>
+            </div>
+            <div class="col-md-5 feature-box"><i class="material-icons">all_inclusive</i>
+                <h5><strong>Classic Design</strong>&nbsp;</h5>
+                <p>With our classic designs, your piece will never go out of fashion.</p>
+            </div>
+            <div class="col-md-5 feature-box"><i class="material-icons">eco</i>
+                <h5><strong>Color and Material Choice</strong></h5>
+                <p>Our color and material choices are specially choosen to go along with most of the styles.</p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- 4TH PAGE -->
+<section class="clean-block about-us" style="background-color:rgb(255,255,255); margin-bottom: 70px;">
+    <div class="container">
+        <div class="block-heading">
+            <h4 style="color: #007bff; font-weight: bolder;">Our Unique Colection</h4>
+            <p class="text-center">Inspired and challenged everyday to express emotions in every creation.</p>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-sm-6 col-lg-4">
+                <div class="card clean-card text-center" style="margin-bottom: 15px;">
+                    <img type="button" class="img-fluid card-img-top w-100 d-block" routerLink="/collection" src="../../../assets/my-project-images/fabricColors.jpg" data-bs-hover-animate="pulse">
+                    <div class="card-body info">
+                        <h4 style="font-weight:bolder; font-size:1em;"><a routerLink="/collection">CHOOSE QUALITY</a></h4>
+                        <p class="card-text">Discover quality and confort with our classic collection.</p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-4">
-                    <div class="card clean-card text-center"><img class="img-fluid card-img-top w-100 d-block" src="../../../assets/my-project-images/poloShirt.jpg" data-bs-hover-animate="pulse">
-                        <div class="card-body info">
-                            <h4 class="card-title"><a routerLink="/polos">LEVEL UP</a></h4>
-                            <p class="card-text">Join confort with class with our unique polos.</p>
-                        </div>
+            </div>
+            <div class="col-sm-6 col-lg-4">
+                <div class="card clean-card text-center" style="margin-bottom: 15px;">
+                    <img class="img-fluid card-img-top w-100 d-block" type="button" routerLink="/collection/accessories" src="../../../assets/my-project-images/poloShirt.jpg" data-bs-hover-animate="pulse">
+                    <div class="card-body info">
+                        <h4 style="font-weight:bolder; font-size:1em;"><a routerLink="/collection/accessories">LEVEL UP</a></h4>
+                        <p class="card-text">Join confort with class with our unique accessories.</p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-4">
-                    <div class="card clean-card text-center"><img class="img-fluid card-img-top w-100 d-block" src="../../../assets/my-project-images/Shoes.jpg" data-bs-hover-animate="pulse">
-                        <div class="card-body info">
-                            <h4 class="card-title"><a routerLink="/about-us">EMBRACE THE JOURNEY</a></h4>
-                            <p class="card-text">Learn more about our story and what drive us.</p>
-                        </div>
+            </div>
+            <div class="col-sm-6 col-lg-4">
+                <div class="card clean-card text-center" style="margin-bottom: 15px;">
+                    <img class="img-fluid card-img-top w-100 d-block" type="button" routerLink="/about-us" src="../../../assets/my-project-images/Shoes.jpg" data-bs-hover-animate="pulse">
+                    <div class="card-body info">
+                        <h4 style="font-weight:bolder; font-size:1em;"><a routerLink="/about-us">EMBRACE THE JOURNEY</a></h4>
+                        <p class="card-text">Learn more about our story and what drive us.</p>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 </section>
