--- a/vintiTri/src/app/features/navbar/navbar.component.html
+++ b/vintiTri/src/app/features/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
         <div class="container">
-            <a class="navbar-brand logo" routerLink="/">CHITTA</a>
+            <a class="navbar-brand logo" routerLink="/">VINTI-TRI</a>
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1">
                     <span class="navbar-toggler-icon"></span></button>
                         <div class="collapse navbar-collapse" id="navcol-1">
